5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1752_3095.log
== TEST (2019-05-16 17:16:57) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont =! "X"):
	if (partida = "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida = "E"):
		empate = empate + 1
		print empate
	else (partida = "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
File "XXXX", line 8
    while (cont =! "X"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:12) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida = "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida = "E"):
		empate = empate + 1
		print empate
	else (partida = "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
File "XXXX", line 9
    if (partida = "V"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:23) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print empate
	else (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
File "XXXX", line 14
    print empate
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(empate)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:41) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	else (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
File "XXXX", line 15
    else (partida == "D"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:07) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	elif (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:23) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	elif (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:16) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida.upper() == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida.upper() == "E"):
		empate = empate + 1
		print (empate)
	elif (partida.upper() == "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:20:57) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	elif (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- EXECUTION TIME:
0.308848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:21:13) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	elif (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:28:39) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = vitoria + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	elif (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- EXECUTION TIME:
0.324671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:33:24) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		print (vitoria)
	elif (partida == "E"):
		empate = empate + 1
		print (empate)
	elif (partida == "D"):
		derrota = derrota + 1
		print (derrota)

-- EXECUTION TIME:
0.727813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:11) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

vitoria = 3
empate = 2
derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		print (vitoria)
	elif (partida == "E"):
		empate = 2 * cont + 1
		print (empate)
	elif (partida == "D"):
		derrota = 1 * cont + 1
		print (derrota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:32) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		print (vitoria)
	elif (partida == "E"):
		empate = 2 * cont + 1
		print (empate)
	elif (partida == "D"):
		derrota = 1 * cont + 1
		print (derrota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:20) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		soma = vitoria + 1
		print (soma)
	elif (partida == "E"):
		empate = 2 * cont + 1
		soma = empate + 1
		print (soma)
	elif (partida == "D"):
		derrota = 1 * cont + 1
		soma = derrota + 1
		print (soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:37:38) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (cont != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		soma = vitoria + 1
		print (soma)
	elif (partida == "E"):
		empate = 2 * cont + 1
		soma = empate + 1
		print (soma)
	elif (partida == "D"):
		derrota = 1 * cont + 1
		soma = derrota + 1
		print (soma)

-- EXECUTION TIME:
0.752086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:26) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		somaV = vitoria + 1
		print (somaV)
	elif (partida == "E"):
		empate = 2 * cont + 1
		somaE= empate + 1
		print (somaE)
	elif (partida == "D"):
		derrota = 1 * cont + 1
		somaD = derrota + 1
		print (somaD)
print somaV)

-- ERROR:
File "XXXX", line 21
    print somaV)
              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(somaV))?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:41:47) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		somaV = vitoria + 1
		print (somaV)
	elif (partida == "E"):
		empate = 2 * cont + 1
		somaE= empate + 1
		print (somaE)
	elif (partida == "D"):
		derrota = 1 * cont + 1
		somaD = derrota + 1
		print (somaD)
print somaV)

-- EXECUTION TIME:
0.572868
-- ERROR:
  File "/home/codebench/codes/1752/3095/main.py", line 21
    print somaV)
              ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:58) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:30) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:40) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:45) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:10) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:14) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == "V"):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:27) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:31) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		vitoria = 3 * cont + 1
		partida = vitoria + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:10) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:47:13) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- EXECUTION TIME:
0.0302
-- ERROR:
Error response from daemon: Container bc7f14f80dba1afcd5fc85079db485f1081cc88bc5096490ebff7b5bde99262e is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:14) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:47:15) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	#elif (partida == "E"):
		#empate = 2 * cont + 1
		#somaE= empate + 1
		#print (somaE)
	#elif (partida == "D"):
		#derrota = 1 * cont + 1
		#somaD = derrota + 1
		#print (somaD)


-- EXECUTION TIME:
0.0440259
-- ERROR:
Error response from daemon: Container bc7f14f80dba1afcd5fc85079db485f1081cc88bc5096490ebff7b5bde99262e is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:46) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:49) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:48:49) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- EXECUTION TIME:
0.0274389
-- ERROR:
Error response from daemon: Container bc7f14f80dba1afcd5fc85079db485f1081cc88bc5096490ebff7b5bde99262e is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:51) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:57) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:07) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:49:14) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- EXECUTION TIME:
0.0285258
-- ERROR:
Error response from daemon: Container bc7f14f80dba1afcd5fc85079db485f1081cc88bc5096490ebff7b5bde99262e is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:15) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:27) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:04) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:50:59) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- EXECUTION TIME:
0.171346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:59) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:23) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		partida = 3 * cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		partida = 2 * cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:48) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = 3 * cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = 2 * cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:52:09) 
-- CODE:
partida = int(input("Informe o resultado da partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = 3 * cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = 2 * cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = 1 * cont + 1
		print (partida)


-- EXECUTION TIME:
0.228032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:39) 
-- CODE:
partida = int(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = 3 * cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = 2 * cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = 1 * cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:54:07) 
-- CODE:
partida = int(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
		print (partida)


-- EXECUTION TIME:
0.210204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:08) 
-- CODE:
partida = int(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:16) 
-- CODE:
partida = eval(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:23) 
-- CODE:
partida = eval(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    partida = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:38) 
-- CODE:
from math import *

partida = eval(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    partida = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:41) 
-- CODE:
from math import *

partida = eval(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
		print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
		print (partida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    partida = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:55:10) 
-- CODE:
from math import *

partida = int(input("Resultado da Partida: "))

V = 3
#vitoria = 3
#empate = 2
#derrota = 1
cont = cont + 1

while (partida != "X"):
	if (partida.upper() == 'V'):
		V = 3
		partida = partida + 3
		cont = cont + 1
print (partida)
	elif (partida.upper() == 'E'):
		E = 2
		partida = partida + 2
		cont = cont + 1
print (partida)
	elif (partida.upper() == 'D'):
		D = 1
		partida = partida + 1
		cont + 1
print (partida)


-- ERROR:
File "XXXX", line 17
    elif (partida.upper() == 'E'):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
